# LeeRoomDemo

app/: CMakeLists.txt  build.gradle
app/schemas/com.lixinxin.leeroomdemo.global.AppDataBase/: 1.json
app/src/androidTest/java/com/lixinxin/leeroomdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CCallJava.c  Hello.c  native-lib.cpp
app/src/main/java/com/lixinxin/leeroomdemo/: App.java  MainActivity.java
app/src/main/java/com/lixinxin/leeroomdemo/_interface/: OnSizeChangedListener.java
app/src/main/java/com/lixinxin/leeroomdemo/cache/: DiskLruCacheHelper.java  Utils.java
app/src/main/java/com/lixinxin/leeroomdemo/dao/: AnimalDao.java  FoodDao.java
app/src/main/java/com/lixinxin/leeroomdemo/entity/: Animal.java  Food.java  Pojo.java
app/src/main/java/com/lixinxin/leeroomdemo/global/: AppDataBase.java
app/src/main/java/com/lixinxin/leeroomdemo/jni/: CCallJava.java  JNIS.java
app/src/main/java/com/lixinxin/leeroomdemo/model/: FoodViewModel.java
app/src/main/java/com/lixinxin/leeroomdemo/ui/: Test.java
app/src/main/java/com/lixinxin/leeroomdemo/ui/activity/: DiskLruCacheActivity.java  HomeActivity.java  WelcomeActivity.java
app/src/main/java/com/lixinxin/leeroomdemo/view/: MyScrollView.java
app/src/main/jni/: Hello.c
app/src/main/res/layout/: activity_disk_lru_cache.xml  activity_home.xml  activity_main.xml  activity_welcome.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lixinxin/leeroomdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
